--- a/assets/css/pokedex.css
+++ b/assets/css/pokedex.css
@@ -2,27 +2,34 @@
     color: rgb(199, 199, 0);
 }
 
-.pokedex {
-    height: 100vh;
-    /* border: 1px solid red; */
-    position: relative;
-    /*text-align: center;
-    /*  background-image: url('../img/pokedex-bg.jpg');
-    background-repeat: no-repeat;
-    background-size: auto 600px; */
+html {
+    font-size: 2.6vh;
+}
+
+body {
+    margin: 0;
+    padding: 0;
     background-color: #D6D6D6;
-    z-index: 1;
-    /* margin-left: 100px;
-    margin-top: 100px; */
 }
 
 
-/* #pokedex-img {
+/* Ancho y largo del pokedex. La idea es sea dinamico */
+
+
+/* El tamaño durante la construccion fuede 578x600 px */
+
+#pokedex {
+    z-index: 0;
+    /* height: 100vh;
+    width: 96.3vh; */
+}
+
+#pokedex-img {
     position: absolute;
     margin: 0;
     padding: 0;
     z-index: 0;
-} */
+}
 
 * .texto {
     color: white;
@@ -33,7 +40,7 @@
 .texto h3 {
     color: white;
     font-family: 'Press Start 2P';
-    font-size: 16px;
+    font-size: 1rem;
 }
 
 .pantalla {
@@ -47,50 +54,62 @@
 /* //PANTALLAPRINCIPAL */
 
 .pantalla-principal {
-    top: 117px;
-    left: 50px;
-    width: 207px;
-    height: 398px;
+    /* border: 1px solid green; */
+    position: relative;
+    top: 19%;
+    left: 8.4%;
+    width: 36%;
+    height: 66.8%;
     z-index: 0;
 }
 
 #loading-img {
     position: absolute;
-    top: 350px;
-    left: 160px;
+    top: 87.3%;
+    left: 76.89%;
+}
+
+#pImg {
+    height: 50%;
 }
 
 #pStats {
+    margin-top: 5%;
     position: relative;
-    top: 200px;
-    height: 200px;
+    top: 60%;
+    height: 35%;
+    overflow: hidden;
+}
+
+.canvasjs-chart-credit {
+    color: black;
 }
 
 
-/* //END PANTALLA PRINCIPAL */
+/* //END  */
 
 
 /* PANTALLA DE BUSQUEDA */
 
-.pantalla-busqueda,
-.busqueda {
+.pantalla-busqueda {
     margin: 0;
-    top: 178px;
-    left: 345px;
-    width: 208px;
-    height: 95px;
+    top: 29.65%;
+    left: 59.6%;
+    width: 35.9%;
+    height: 15.8%;
+}
+
+#buscador {
+    height: 100%;
+    width: 100%;
 }
 
 #encontrado-mensaje {
     background-color: black;
-    left: 358px;
-}
-
-.mensaje {
-    top: 215px;
-    left: 750px;
-    width: 190px;
-    height: 20px;
+    left: 61.9%;
+    top: 35.8%;
+    width: 32.8%;
+    height: 3.3%;
     color: green;
 }
 
@@ -101,17 +120,18 @@
 #enter {
     display: inline;
     position: absolute;
-    top: 303px;
-    left: -1px;
-    width: 89px;
-    height: 41px;
+    font-size: 0.75rem;
+    top: 319.6%;
+    left: 0;
+    width: 42.9%;
+    height: 43.2%;
 }
 
 input:focus {
     /* estos son para mantener el color negro del placeholder del formulario*/
     background-color: black;
     font-family: 'Press Start 2P';
-    font-size: small;
+    font-size: 1rem;
     text-align: center;
     color: white;
     border-color: black;
@@ -124,6 +144,7 @@ input {
     text-align: center;
     color: white;
     border-color: black;
+    font-size: 1rem;
 }
 
 
